étape 2 - page de connexion codée

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -84,6 +84,12 @@ h2{
 	font-size: 30px;
 	color: #1D6154
 }
+
+a{
+	text-decoration: none;
+	color: black;
+}
+
 nav ul {
 	display: flex;
 	align-items: center;
@@ -95,8 +101,9 @@ nav li {
 	font-size: 1.2em;
 }
 
-li:hover {
+li:hover, a:hover{
 	color: #B1663C;
+	font-weight: 900;
 }
 #introduction {
 	display: flex;
@@ -164,29 +171,31 @@ li:hover {
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
-#contact > * {
+#contact > *, #login {
 	text-align: center;
 
 }
-#contact h2{
+#contact h2, #login h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#contact form, .login-form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+
+#contact input, .login-form input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+
+#contact label, #login label {
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
@@ -194,7 +203,7 @@ margin: auto;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"], #login-btn{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -211,3 +220,21 @@ footer nav ul {
 	margin: 2em
 }
 
+/* CSS rules for login page */
+
+#login{
+	height:95vh;
+	width:379px;
+	margin: auto;
+}
+
+
+#login-btn:hover{
+	font-weight: bold;
+	cursor: pointer;
+}
+
+#login a{
+	align-self: center;
+	text-decoration: underline;
+}
