--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -53,7 +53,7 @@ body {
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
-header {
+#navbar {
 	display: flex;
 	justify-content: space-between;
 	margin: 50px 0
@@ -65,6 +65,7 @@ section {
 h1{
 	display: flex;
 	flex-direction: column;
+	text-transform: uppercase;
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
@@ -105,6 +106,33 @@ li:hover, a:hover{
 	color: #B1663C;
 	font-weight: 900;
 }
+
+
+.edit-banner{
+	width:100%;
+	background-color: black;
+	display:none;
+	gap:1vw;
+	margin-top: 0;
+	margin-bottom: 20px;
+	padding:8px 0;
+	color:white;
+	justify-content: center;
+	align-items: center;
+}
+
+#navbar{
+	display: flex;
+	justify-content: space-between;
+}
+
+#logout-btn{
+	display:none;
+}
+#banner-btn{
+	border-radius: 25px;
+	padding: 8px 16px;
+}
 #introduction {
 	display: flex;
 	align-items: center;
@@ -116,6 +144,7 @@ li:hover, a:hover{
 	display: block;
 	margin: auto;
 	width: 80%;
+	padding-bottom: 16px;
 }
 
 #introduction article {
@@ -131,6 +160,21 @@ li:hover, a:hover{
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+}
+
+
+
+.edit-link{
+	display: none;
+	color:black;
+	font-size:14px;
+	font-family: 'Work Sans';
+	font-weight: 400;
+
+}
+
+.edit-link i{
+	padding:0 8px 0 52px
 }
 
 .filterbar{
@@ -203,7 +247,7 @@ li:hover, a:hover{
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"], #login-btn{
+input[type="submit"], #login-submit{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -229,7 +273,7 @@ footer nav ul {
 }
 
 
-#login-btn:hover{
+#login-submit:hover{
 	font-weight: bold;
 	cursor: pointer;
 }
@@ -238,3 +282,4 @@ footer nav ul {
 	align-self: center;
 	text-decoration: underline;
 }
+
