--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -274,10 +274,6 @@ input[type="submit"], #login-submit, .add-photo-button, .confirm-photo-button {
 input[type="submit"], #login-submit, .add-photo-button{
 	background-color: #1D6154;}
 
-#confirm-photo-button{
-	background-color: #A7A7A7;
-}
-
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
@@ -326,8 +322,8 @@ footer nav ul {
 
 #modal-container,  #add-photo-container{
 	overflow: auto;
-	width:550px;
-	max-height: calc(100vh - 20px);
+	width: 500px;
+	height: 550px;
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
@@ -361,7 +357,7 @@ footer nav ul {
 	margin: 8px 0 24px 0;
 }
 .modal-gallery {
-	width: 80%;
+	width: 90%;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -372,7 +368,7 @@ footer nav ul {
 }
 
 .modal-figure{
-	width:100px;;
+	width:16%;
 }
 
 .modal-gallery img{
@@ -403,7 +399,7 @@ footer nav ul {
 	position: relative;
 	text-align: right;
 	top: -100px;
-	margin-right:3px ;
+	margin-right:4px ;
 	height:0px;
 }
 
@@ -424,8 +420,6 @@ footer nav ul {
 	background: none;
 	border: none;
 }
-
-
 
 #add-photo-container .return-button, #add-photo-container i{
 	visibility: visible;
@@ -454,7 +448,6 @@ footer nav ul {
 	flex-direction: column;
 	justify-content: space-between;
 	padding-bottom: 24px;
-	border-bottom: 1px solid grey;
 }
 
 .input-btn{
@@ -470,6 +463,8 @@ footer nav ul {
 .confirm-photo-button{
 	background-color: #A7A7A7;
 	border: none;
+	margin:0;
+	align-self: center;
 }
 
 .modal-icons{
@@ -480,3 +475,32 @@ footer nav ul {
 	background-color: none;
 }
 
+hr{
+	margin:16px 0 30px 0;
+	padding:0;
+	align-self: normal;
+}
+
+.input-zone{
+	height:100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+}
+output{
+  width: 100%;
+}
+
+output .image{
+  height: 150px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+output .image img{
+  height: 100%;
+  width: 50%;
+  object-fit: cover;
+}
