--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -112,7 +112,7 @@ li:hover, a:hover{
 	font-weight: 900;
 }
 
-
+/* EDITOR MODE CSS RULES */
 .edit-banner{
 	position: absolute;
 	left:0px;
@@ -134,6 +134,32 @@ li:hover, a:hover{
 	border-radius: 25px;
 	padding: 8px 16px;
 }
+
+.open-js-modal{
+	display: none;
+	color:black;
+	font-size:14px;
+	font-family: 'Work Sans';
+	font-weight: 400;
+	align-items: center;
+	padding-bottom: 16px;;
+}
+
+.open-js-modal i{
+	padding: 0 8px 0 0;
+	font-size: 1rem;
+}
+
+#portfolio .open-js-modal{
+	margin-left: 24px;
+}
+
+#introduction-image .open-js-modal{
+	margin-left:55px
+}
+
+/* INTRODUCTION SECTION */
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -159,32 +185,13 @@ li:hover, a:hover{
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
+
+/*  PORTFOLIO SECTION */
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
-}
-
-.open-js-modal{
-	display: none;
-	color:black;
-	font-size:14px;
-	font-family: 'Work Sans';
-	font-weight: 400;
-	align-items: center;
-	padding-bottom: 16px;;
-}
-
-.open-js-modal i{
-	padding: 0 8px 0 0;
-	font-size: 1rem;
-}
-
-#portfolio .open-js-modal{
-	margin-left: 24px;
-}
-
-#introduction-image .open-js-modal{
-	margin-left:55px
 }
 
 .filterbar{
@@ -223,6 +230,9 @@ li:hover, a:hover{
 	width: 100%;
 
 }
+
+
+/* CONTACT SECTION */
 #contact {
 	width: 50%;
 	margin: auto;
@@ -240,7 +250,6 @@ li:hover, a:hover{
 	display: flex;
 	flex-direction: column;
 }
-
 
 #contact input, .login-form input, #modal input, select {
 	height: 50px;
@@ -271,7 +280,7 @@ input[type="submit"], #login-submit, .add-photo-button, .confirm-photo-button, .
 }
 
 .green-button{
-	margin: 1em auto
+	margin: 0 auto
 }
 
 footer nav ul {
@@ -280,7 +289,7 @@ footer nav ul {
 	margin: 2em
 }
 
-/* CSS rules for login page */
+/* CSS RULES FOR LOGIN PAGE */
 
 #login{
 	height:90vh;
@@ -309,7 +318,7 @@ footer nav ul {
 	display: none;
 	overflow: auto;
 	width: 500px;
-	max-height: calc(100vh - 20px);
+	height: calc(100vh - 50px);
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
@@ -333,7 +342,7 @@ footer nav ul {
 	cursor: pointer;
 }
 
-/* Gallery modal */
+/* Modal gallery view*/
 
 #modal-container p{
 	color: #D65353;
@@ -386,7 +395,7 @@ footer nav ul {
 }
 
 
-/* Formulaire ajout photos */
+/* Add-photos modal */
 
 #add-photo-container input, #add-photo-container select{
 	margin: 8px 0 24px 0;
@@ -406,8 +415,7 @@ footer nav ul {
 	display: flex
 }
 
-/* Preview space */
-.drag-area{
+.preview-area{
 	height:150px;
 	background-color: #E8F1F6;
 	display: flex;
@@ -429,7 +437,6 @@ footer nav ul {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding-bottom: 24px;
 }
 
 .input-btn{
