--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -318,7 +318,7 @@ footer nav ul {
 	display: none;
 	overflow: auto;
 	width: 500px;
-	height: calc(100vh - 50px);
+	max-height: calc(100vh - 50px);
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
