--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -209,6 +209,11 @@ h1, li:hover, a:hover{
 	color:#1D6154;
 }
 
+.filterbutton:focus{
+	background-color: #1D6154;
+	color:white;
+}
+
 .green-button, .filterbutton:hover, input[type="submit"], #login-submit, .add-photo-button{
 	background-color: #1D6154;
 	color:white;
@@ -293,6 +298,7 @@ footer nav ul {
 
 /* MODAL WINDOW */
 #modal{
+	background-color: rgba(20,20,20, 0.6);
 	position:fixed;
 	align-items: center;
 	justify-content: center;
@@ -301,6 +307,7 @@ footer nav ul {
 	width: 100%;
 	height: 100%;
 }
+
 
 #modal-container,  #add-photo-container{
 	flex-direction: column;
